--- a/array_accessEle.html
+++ b/array_accessEle.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    
+  <head>
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <script>
+      //   let data = [9, 45, 2, 4, 8, 766, 99, 63, 32, 78, 0, 77];
+      //   let newEl = 70;
+      //   let position = 2;
+      //   console.log(data)
+      //   for(let i=data.length-1; i>=0;i--){
+      //     // document.write(data[i]);
+      //     if(i>=position){
+      //         data[i+1]=data[i];
+      //         if(i==position){
+      //             data[i]=newEl;
+      //         }
+      //     }
+      //   }
+      //   console.log(data)
+      function insertEl() {
+        let data = [9, 45, 2, 4, 8, 766, 99, 63, 32, 78, 0, 77];
+        let newEl = document.getElementById('newEl').value;
+        newEl = parseInt(newEl);
+        let position = document.getElementById('position').value;
+        console.log(data);
+        for (let i = data.length - 1; i >= 0; i--) {
+          // document.write(data[i]);
+          if (i >= position) {
+            data[i + 1] = data[i];
+            if (i == position) {
+              data[i] = newEl;
+            }
+          }
+        }
+        console.warn(data);
+      }
+
+// undefined
+// data.splice(2,0,2000);
+// []
+// data
+// (6) [10, 20, 2000, 30, 40, 50]
+    </script>
+  </head>
+  <body>
+    <input type="text" id="position" placeholder="Enter Position" />
+    <input type="text" id="newEl" placeholder="enter new Element" />
+    <button onclick="insertEl()">Insert</button>
+  </body>
 </html>
